<resources>
    <string name="app_name">PesoMakaNan</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="i_am_a">I am a</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="description">Description</string>

    <string name="category_code">Category code</string>
    <string name="category_name">Category Name</string>
    <string name="categories">Categories</string>
    <string name="tax_percentage">Tax percentage</string>
    <string name="add_category">Add Category</string>

    <string name="add_item">Add Item</string>
    <string name="enter_price">Enter price</string>
    <string name="item_code">Item code</string>
    <string name="item_name">Item Name</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_order">OrderActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_add_item">Add item</string>
    <string name="menu_logout">Logout</string>

    <!--Purchase-->
    <string name="vendor_name">Vendor Name</string>
    <string name="amount">Amount</string>
    <string name="tax_amount">Tax Amount</string>
    <string name="total_amount">Total Amount</string>
    <string name="order_date">Order Date</string>
    <string name="payment_method">Payment Method</string>
    <string name="net_payment">Net Payment</string>
    <string name="custom_payment">Custom Payment</string>
    <string name="custom_amount">Custom Amount</string>
    <string name="pending_payment_date">Pending Payment Date</string>
    <string name="emi">EMI</string>
    <string name="emi_amount">EMI Amount</string>
    <string name="emi_duration">EMI Duration</string>
    <string name="emi_start_date">EMI Start Date</string>
    <string name="emi_end_date">EMI End Date</string>
    <string name="paid_amount">Paid Amount</string>
    <string name="balance_amount">Balance Amount</string>
    <string name="purchase">Purchase</string>
    <string name="recent_purchases">Recent Purchase</string>
    <string name="reset">Reset</string>
    <string name="Rs">\u20B9 </string>

    <!--Employee-->
    <string name="mobile_number">Mobile Number</string>
    <string name="salary">Salary</string>
    <string name="salary_cut_off">Salary cut off</string>
    <string name="in_time">IN Time</string>
    <string name="out_time">OUT Time</string>
    <string name="employee">Employee</string>
    <string name="add_employee">Add Employee</string>
    <string name="please_wait">Please wait..</string>

    <!--Attendance-->
    <string name="employee_id">Employee ID</string>
    <string name="employee_name">Employee Name</string>
    <string name="date">Date</string>
    <string name="submit">Submit</string>
    <string name="attendance">Attendance</string>
    <string name="advance">Advance</string>
    <string name="payment_type">Payment Type</string>
    <string name="salary_paid_days">Salary paid days</string>
    <string name="payment">Payment</string>
    <string name="pay">Pay</string>
    <string name="advance_taken">Advance taken</string>
    <string name="create_order">Create Order</string>
    <string name="update_order">Update Order</string>
    <string name="order_name">Order Name</string>
    <string name="create">Create</string>
    <string name="orders">Orders</string>
    <string name="items">Items</string>

    <string-array name="tables">
        <item>Select a table</item>
        <item>Table 1</item>
        <item>Table 2</item>
        <item>Table 3</item>
        <item>Table 4</item>
        <item>Table 5</item>
        <item>Table 6</item>
        <item>Table 7</item>
        <item>Table 8</item>
        <item>Table 9</item>
        <item>Table 10</item>
        <item>Table 11</item>
        <item>Table 12</item>
        <item>Table 13</item>
        <item>Table 14</item>
        <item>Table 15</item>
    </string-array>

</resources>