<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_categories" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_add_item" />
        <item
            android:id="@+id/nav_purchase"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/purchase" />
        <item
            android:id="@+id/nav_employee"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/employee" />
        <item
            android:id="@+id/nav_attendance"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/attendance" />
        <item
            android:id="@+id/nav_payment"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/payment" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_logout" />
    </group>
</menu>