<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.asmirestoran.pesomakanan.ui.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_category"
        android:name="com.asmirestoran.pesomakanan.ui.CategoryListFragment"
        android:label="@string/categories"
        tools:layout="@layout/layout_category_list" />


    <fragment
        android:id="@+id/nav_add_category"
        android:name="com.asmirestoran.pesomakanan.ui.AddCategoryFragment"
        android:label="@string/add_category"
        tools:layout="@layout/fragment_add_category" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.asmirestoran.pesomakanan.ui.adapter.AddItemFragment"
        android:label="@string/add_item"
        tools:layout="@layout/fragment_add_item" />

    <fragment
        android:id="@+id/nav_purchase"
        android:name="com.asmirestoran.pesomakanan.ui.PurchaseFragment"
        android:label="@string/purchase"
        tools:layout="@layout/fragment_add_purchase" />

    <fragment
        android:id="@+id/navigation_add_category"
        android:name="com.asmirestoran.pesomakanan.ui.PurchaseFragment"
        android:label="@string/add_category"
        tools:layout="@layout/fragment_add_category" />

</navigation>