<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.asmirestoran.pesomakanan.ui.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_category_list"
        android:name="com.asmirestoran.pesomakanan.ui.CategoryListFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/layout_category_list" />

    <fragment
        android:id="@+id/navigation_add_category"
        android:name="com.asmirestoran.pesomakanan.ui.AddCategoryFragment"
        android:label="@string/add_category"
        tools:layout="@layout/fragment_add_category" />

</navigation>