<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="order"
            type="com.asmirestoran.pesomakanan.model.Order" />

    </data>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green_dark"
            android:gravity="center"
            android:padding="@dimen/nav_header_vertical_spacing"
            android:text="@string/create_order"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/medium_margin"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_toStartOf="@+id/iv_search"
            android:background="@android:color/transparent"
            android:hint="@string/order_name">

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@={order.orderName}"
                android:textSize="@dimen/sp_14" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register"
            style="@style/ButtonNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/medium_margin"
            android:layout_marginTop="@dimen/medium_margin"
            android:text="@string/create" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</layout>