<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="signupViewModel"
            type="com.asmirestoran.pesomakanan.viewmodel.SignupViewModel" />

        <import type="android.view.View" />

        <variable
            name="error"
            type="String" />

    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:background="@android:color/transparent"
            android:src="@drawable/logo" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/large_margin"
            android:paddingTop="50dp">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextFieldStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/enter_name">

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_person"
                    android:drawablePadding="10dp"
                    android:inputType="textEmailAddress"
                    android:text="@={signupViewModel.user.name}"
                    android:textSize="@dimen/sp_14" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextFieldStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/enter_email">

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="10dp"
                    android:inputType="textEmailAddress"
                    android:text="@={signupViewModel.user.emailId}"
                    android:textSize="@dimen/sp_14" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextFieldStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                app:passwordToggleEnabled="true">

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_password"
                    android:drawablePadding="10dp"
                    android:inputType="textPassword"
                    android:text="@={signupViewModel.user.password}"
                    android:textSize="@dimen/sp_14" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextFieldStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                app:passwordToggleEnabled="true">

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_password"
                    android:drawablePadding="10dp"
                    android:inputType="textPassword"
                    android:text="@={signupViewModel.user.confirmPassword}"
                    android:textSize="@dimen/sp_14" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/sp_roles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_margin"
                android:background="@android:color/transparent"
                tools:listitem="@layout/role_item" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="@dimen/medium_margin"
                android:text="@{error}"
                android:visibility="@{error.length()>0?View.VISIBLE:View.GONE}" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                style="@style/ButtonNormal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_margin"
                android:text="@string/register" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_margin"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_account"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_16" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/medium_margin"
                    android:text="@string/sign_in"
                    android:textColor="@color/green"
                    android:textSize="@dimen/sp_16"
                    android:textStyle="bold" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>


</layout>