<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="paymentViewModel"
            type="com.asmirestoran.pesomakanan.viewmodel.PaymentViewModel" />

        <import type="com.asmirestoran.pesomakanan.FloatConvertors" />

        <import type="android.view.View" />

        <import type="com.asmirestoran.pesomakanan.model.Type" />

        <variable
            name="error"
            type="String" />

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clickable="true"
        android:focusable="true">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/large_margin"
                android:paddingTop="50dp">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/TextFieldStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="@dimen/medium_margin"
                        android:layout_toStartOf="@+id/iv_search"
                        android:background="@android:color/transparent"
                        android:hint="@string/employee_id">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@={paymentViewModel.paymentLiveData.employeeId}"
                            android:textSize="@dimen/sp_14" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/iv_search"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:src="@android:drawable/ic_search_category_default"
                        android:tint="@color/grey" />

                </RelativeLayout>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/ll_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/TextFieldStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/employee_name">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/et_mobile_number"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:focusable="false"
                            android:text="@={paymentViewModel.paymentLiveData.employeeName}"
                            android:textSize="@dimen/sp_14" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/medium_margin"
                        android:orientation="horizontal">

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/TextFieldStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="0dp"
                            android:layout_marginEnd="@dimen/medium_margin"
                            android:layout_toStartOf="@+id/iv_date_pick"
                            android:background="@android:color/transparent"
                            android:hint="@string/date">

                            <androidx.appcompat.widget.AppCompatEditText
                                android:id="@+id/et_date"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:focusable="false"
                                android:inputType="phone"
                                android:text="@={paymentViewModel.paymentLiveData.date}"
                                android:textSize="@dimen/sp_14" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/iv_date_pick"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:src="@drawable/ic_calendar" />

                    </RelativeLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/TextFieldStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/salary">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/et_salary"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:focusable="false"
                            android:inputType="number"
                            android:text="@={paymentViewModel.paymentLiveData.salary}"
                            android:textSize="@dimen/sp_14" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/TextFieldStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/advance_taken">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/et_advance_amount_taken"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:focusable="false"
                            android:inputType="number"
                            android:textSize="@dimen/sp_14" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/TextFieldStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/salary_cut_off">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/et_salary_cut_off"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:focusable="false"
                            android:inputType="number"
                            android:textSize="@dimen/sp_14" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/Label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginTop="@dimen/large_margin"
                        android:text="@string/payment_type"
                        android:textStyle="bold" />


                    <RadioGroup
                        android:id="@+id/rg_payment_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatRadioButton
                            android:id="@+id/rb_payment_type_salary"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/green_dark"
                            android:text="@string/salary" />

                        <androidx.appcompat.widget.AppCompatRadioButton
                            android:id="@+id/rb_payment_type_advance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/medium_margin"
                            android:buttonTint="@color/green_dark"
                            android:text="@string/advance" />

                    </RadioGroup>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_advance_amount"
                        style="@style/TextFieldStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/amount"
                        android:visibility="gone">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="number"
                            android:text="@={paymentViewModel.paymentLiveData.advanceAmount}"
                            android:textSize="@dimen/sp_14" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/TextFieldStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/salary_paid_days">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="number"
                            android:text="@={paymentViewModel.paymentLiveData.salaryPaidDays}"
                            android:textSize="@dimen/sp_14" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/Error"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginTop="@dimen/medium_margin"
                        android:text="@{error}"
                        android:visibility="@{error.length()>0?View.VISIBLE:View.GONE}" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btn_register"
                            style="@style/ButtonNormal"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/medium_margin"
                            android:layout_marginEnd="@dimen/text_padding"
                            android:layout_marginBottom="@dimen/btn_height"
                            android:layout_weight="1"
                            android:text="@string/pay" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btn_reset"
                            style="@style/ButtonNormal"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/text_padding"
                            android:layout_marginTop="@dimen/medium_margin"
                            android:layout_marginBottom="@dimen/btn_height"
                            android:layout_weight="1"
                            android:backgroundTint="@color/orange"
                            android:text="@string/reset" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </ScrollView>

        <include
            android:id="@+id/pb"
            layout="@layout/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

    </FrameLayout>


</layout>